--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -93,8 +93,11 @@
     "nanoid": "~3.1.30",
     "nodemailer": "^6.6.3",
     "passport": "0.4.1",
+    "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
+    "passport-oauth2-client-password": "0.1.2",
+    "passport-strategy": "1.x.x",
     "pg": "8.7.1",
     "pkcs7-padding": "0.1.1",
     "qs": "6.9.6",
@@ -106,9 +109,7 @@
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.41",
     "uuid": "8.3.2",
-    "passport-http-bearer": "1.0.1",
-    "passport-oauth2-client-password": "0.1.2",
-    "passport-strategy": "1.x.x"
+    "webpack": "^5.76.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
@@ -128,12 +129,12 @@
     "@types/nodemailer": "^6.4.2",
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
+    "@types/passport-oauth2-client-password": "0.1.2",
+    "@types/passport-strategy": "0.2.35",
     "@types/supertest": "2.0.10",
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
-    "@types/passport-oauth2-client-password": "0.1.2",
-    "@types/passport-strategy": "0.2.35",
     "chai": "4.2.0",
     "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.2.1",
