--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -88,7 +88,7 @@
     "immer": "^9.0.6",
     "jsonwebtoken": "^9.0.1",
     "loader-utils": "^2.0.4",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "luxon": "1.27.0",
     "minimist": "^1.2.6",
     "moment": "2.29.4",
