--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -82,6 +82,7 @@
     "dotenv": "8.2.0",
     "ejs": "^3.1.7",
     "ethers": "5.3.1",
+    "follow-redirects": "^1.14.7",
     "form-data": "~4.0.0",
     "ganache-cli": "6.12.2",
     "handlebars": "^4.7.7",
