--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -33,6 +33,7 @@
     "typeorm:drop": "yarn typeorm schema:drop",
     "typeorm:drop:issuer": "node_modules/typeorm/cli.js schema:drop --config node_modules/@energyweb/issuer-api/dist/js/ormconfig.js",
     "typeorm:dropAndMigrate": "yarn typeorm:drop && yarn typeorm:run",
+    "test:jest": "jest",
     "test:mocha": "mocha -r ts-node/register 'src/**/*.spec.ts' --timeout 60000 --exit",
     "test:e2e:mocha": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
     "test:e2e": "concurrently --success first --kill-others -n eth,test \"yarn run:ganache\" \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
@@ -93,8 +94,11 @@
     "nanoid": "~3.1.30",
     "nodemailer": "^6.6.3",
     "passport": "0.4.1",
+    "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.0",
     "passport-local": "1.0.0",
+    "passport-oauth2-client-password": "0.1.2",
+    "passport-strategy": "1.x.x",
     "pg": "8.7.1",
     "pkcs7-padding": "0.1.1",
     "qs": "6.9.6",
@@ -105,10 +109,7 @@
     "stream": "^0.0.2",
     "swagger-ui-express": "4.1.6",
     "typeorm": "0.2.41",
-    "uuid": "8.3.2",
-    "passport-http-bearer": "1.0.1",
-    "passport-oauth2-client-password": "0.1.2",
-    "passport-strategy": "1.x.x"
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.22",
@@ -128,12 +129,12 @@
     "@types/nodemailer": "^6.4.2",
     "@types/passport-jwt": "3.0.3",
     "@types/passport-local": "1.0.33",
+    "@types/passport-oauth2-client-password": "0.1.2",
+    "@types/passport-strategy": "0.2.35",
     "@types/supertest": "2.0.10",
     "@types/uuid": "8.3.0",
     "@typescript-eslint/eslint-plugin": "3.10.1",
     "@typescript-eslint/parser": "3.10.1",
-    "@types/passport-oauth2-client-password": "0.1.2",
-    "@types/passport-strategy": "0.2.35",
     "chai": "4.2.0",
     "eslint": "7.15.0",
     "eslint-config-airbnb-base": "14.2.1",
@@ -143,7 +144,9 @@
     "jest": "26.6.0",
     "mocha": "8.2.1",
     "shx": "0.3.3",
+    "sinon": "^17.0.1",
     "supertest": "6.0.1",
+    "ts-jest": "^26.5.0",
     "ts-node": "9.1.0",
     "typescript": "4.1.3",
     "wait-on": "5.2.1"
@@ -155,10 +158,16 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".spec.ts$",
+    "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
+    "moduleNameMapper": {
+      "^src/(.*)$": "<rootDir>/$1"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
