--- a/apps/drec-api/tsconfig.json
+++ b/apps/drec-api/tsconfig.json
@@ -5,20 +5,23 @@
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
+    "allowSyntheticDefaultImports": true,
     "target": "ES2020",
     "sourceMap": true,
-    "outDir": "./dist/js",
+    "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "types": ["jest", "node", "mocha"],
-    "typeRoots": ["../node_modules/@types"],
     "resolveJsonModule": true,
-    "preserveWatchOutput": true
+    "preserveWatchOutput": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false
   },
   "include": ["src/**/*", "migrations/*", "ormconfig*.ts"],
   "exclude": ["node_modules", "dist", ".spec.ts"]
