--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -19,7 +19,6 @@
     "clean": "shx rm -rf dist",
     "drop": "yarn redis:drop && yarn typeorm:drop && yarn typeorm:drop:issuer",
     "redis:drop": "redis-cli flushall",
-    "deploy:heroku": "make -B build deploy-heroku",
     "prettier": "prettier --write --config-precedence file-override './src/**/*'",
     "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
@@ -36,10 +35,10 @@
     "test:jest": "jest",
     "test:mocha": "mocha -r ts-node/register 'src/**/*.spec.ts' --timeout 60000 --exit",
     "test:e2e:mocha": "mocha -r ts-node/register test/*.e2e-spec.ts --timeout 60000 --exit",
-    "test:e2e": "concurrently --success first --kill-others -n eth,test \"yarn run:ganache\" \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
+    "test:e2e": "concurrently --success first --kill-others -n eth,test \"wait-on tcp:8545 && yarn typeorm:drop && yarn migrate && yarn test:e2e:mocha\"",
     "test:e2e:single": "sh ./scripts/test-e2e-single.sh",
-    "run:ganache": "ganache-cli -q -m 'stone eyebrow bronze glide upon subject camera cushion rice outside swing casual' -l 8000000 -e 1000000 -a 20",
-    "compodoc": "npx compodoc -p tsconfig.json -n \"Drec api documentation\""
+    "compodoc": "npx compodoc -p tsconfig.json -n \"Drec api documentation\"",
+    "coverage:jest": "jest --coverage"
   },
   "bin": {
     "drec-backend": "./bin/drec-api"
@@ -83,7 +82,6 @@
     "dotenv": "8.2.0",
     "ethers": "5.3.1",
     "form-data": "~4.0.0",
-    "ganache-cli": "6.12.2",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.1",
     "lodash": "4.17.21",
