--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -20,7 +20,8 @@
     "drop": "yarn redis:drop && yarn typeorm:drop && yarn typeorm:drop:issuer",
     "redis:drop": "redis-cli flushall",
     "deploy:heroku": "make -B build deploy-heroku",
-    "prettier": "prettier --write --config-precedence file-override './src/**/*'",
+    "prettier": "prettier --check --config-precedence file-override './src/**/*'",
+    "prettier:fix": "prettier --write --config-precedence file-override './src/**/*'",
     "lint": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --no-error-on-unmatched-pattern",
     "lint:fix": "eslint \"src/**/*{.ts,.tsx}\" \"test/**/*{.ts,.tsx}\" \"migrations/**/*{.ts,.tsx}\" --fix --no-error-on-unmatched-pattern",
     "migrate": "yarn typeorm:run:issuer && yarn typeorm:run && yarn typeorm:run:certificate",
