--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -150,7 +150,8 @@
     "ts-jest": "^26.5.0",
     "ts-node": "9.1.0",
     "typescript": "4.1.3",
-    "wait-on": "5.2.1"
+    "wait-on": "5.2.1",
+    "prettier": "~3.2.5"
   },
   "jest": {
     "moduleFileExtensions": [
